--- a/app/templates/shows.hbs
+++ b/app/templates/shows.hbs
@@ -5,7 +5,8 @@
   <table class="table">
     <thead>
       <th colspan="2">Title</th>
-      <th colspan="3">Episode</th>
+      <th colspan="2">Season</th>
+      <th colspan="2">Episode</th>
     </thead>
     {{#each}}
       <tr>
@@ -14,14 +15,25 @@
           <button {{action "confirmEdit" this}} class="btn btn-default btn-sm">
             <span class="glyphicon glyphicon-pencil"></span> Edit
           </button>
-        </td> 
+        </td>
+        <td>{{season}}</td>
+        <td>
+          <div class="btn-group">
+            <button class="btn btn-default btn-sm" {{action "incrementSeason" this}}>
+              <span class="glyphicon glyphicon-plus"></span>
+            </button>
+            <button class="btn btn-default btn-sm" {{action "decrementSeason" this}}>
+              <span class="glyphicon glyphicon-minus"></span>
+            </button>
+          </div>
+        </td>
         <td>{{episode}}</td>
         <td>
           <div class="btn-group">
-            <button class="btn btn-default btn-sm" {{action "increment" this}}>
+            <button class="btn btn-default btn-sm" {{action "incrementEpisode" this}}>
               <span class="glyphicon glyphicon-plus"></span>
             </button>
-            <button class="btn btn-default btn-sm" {{action "decrement" this}}>
+            <button class="btn btn-default btn-sm" {{action "decrementEpisode" this}}>
               <span class="glyphicon glyphicon-minus"></span>
             </button>
           </div>
@@ -34,8 +46,21 @@
       </tr>
     {{/each}}
     <tr>
-      <td colspan="2" class="col-md-7 col-xs-5">
+      <td colspan="2" class="col-md-5 col-xs-5">
         {{input value=rowNewTitle action="createShow" placeholder="Insert a new show" classNames="form-control" id="rowTitleInput" type="text"}}
+      </td>
+      <td class="col-md-1 col-xs-2">
+        {{input value=rowNewSeason action="createShow" classNames="form-control" id="rowSeasonInput" type="number"}}
+      </td>
+      <td class="col-md-1 col-xs-3">
+        <div class="btn-group">
+          <button class="btn btn-default btn-sm" {{action "incrementNewSeason"}}>
+            <span class="glyphicon glyphicon-plus"></span>
+          </button>
+          <button class="btn btn-default btn-sm" {{action "decrementNewSeason"}}>
+            <span class="glyphicon glyphicon-minus"></span>
+          </button>
+        </div>
       </td>
       <td class="col-md-1 col-xs-2">
         {{input value=rowNewEpisode action="createShow" classNames="form-control" id="rowEpisodeInput" type="number"}}
@@ -89,6 +114,10 @@
           <div class="form-group">
             <label for="titleInput">Title</label>
             {{input value=modalTitle placeholder=title classNames="form-control" id="titleInput" type="text"}}
+          </div>
+          <div class="form-group">
+            <label for="seasonInput">Season</label>
+            {{input value=modalSeason placeholder=season classNames="form-control" id="seasonInput" type="number"}}
           </div>
           <div class="form-group">
             <label for="episodeInput">Episode</label>
